# pg_analytics

./: Cargo.toml
pg_analytics_benches/: Cargo.toml
pg_analytics_benches/benches/: cache_performance.rs  cache_performance_ds_pq_auto_sales.rs  cache_performance_ds_pq_eslogs.rs
pg_analytics_test_helpers/: Cargo.toml
pg_analytics_test_helpers/src/: lib.rs
pg_analytics_test_helpers/src/fixtures/: mod.rs
pga_fixtures/: Cargo.toml
pga_fixtures/src/: lib.rs
pga_fixtures/src/tables/: eslogs.rs  mod.rs
src/: lib.rs
src/api/: mod.rs
src/duckdb/: connection.rs  parquet.rs
src/fdw/: base.rs  handler.rs  mod.rs  parquet.rs  trigger.rs
src/hooks/: executor.rs  mod.rs  query.rs
tests/: datetime.rs  explain.rs  scan.rs  settings.rs  table_config.rs  test_eslogs.rs  test_mlp_auto_sales.rs  time_bucket.rs
tests/fixtures/: db.rs  mod.rs  print_utils.rs
tests/fixtures/tables/: auto_sales.rs
