[package]
name = "pg_analytics_test_helpers"
version = "0.1.0"
edition = "2021"
description = "Shared test utilities for pg_analytics project."
license = "AGPL-3.0"

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
anyhow = "1.0.83"
sqlx = { version = "0.7.3", features = [
  "postgres",
  "runtime-async-std",
  "time",
  "bigdecimal",
  "uuid",
  "chrono",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
datafusion = "37.1.0"
async-std = { version = "1.12.0", features = ["tokio1", "attributes"] }
pgrx = "0.11.3"
pgrx-tests = "0.11.3"
prettytable-rs = "0.10.0"
bytes = "1.7.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = "0.4.34"
rstest = "0.19.0"
aws-sdk-s3 = "1.34.0"
futures = "0.3.30"
aws-config = "1.5.1"
serde = "1.0.201"
serde_json = "1.0.120"
serde_arrow = { version = "0.11.3", features = ["arrow-51"] }
tempfile = "3.12.0"
testcontainers = "0.16.7"
testcontainers-modules = { version = "0.4.2", features = ["localstack"] }
duckdb = { git = "https://github.com/paradedb/duckdb-rs.git", features = [
  "bundled",
  "extensions-full",
], rev = "e532dd6" }
rand = { version = "0.8.5" }
time = { version = "0.3.34", features = ["serde"] }
approx = "0.5.1"
soa_derive = "0.13.0"
tracing = "0.1"
